--- a/src/_includes/home/active-conf-home.html
+++ b/src/_includes/home/active-conf-home.html
@@ -7,7 +7,7 @@
         </h1>
 
         <p class="mb-4 text-2xl lg:text-3xl">
-          <strong>September 22-27, 2024</strong>
+          <strong>Dates TBA, {{ site.conf_year }}</strong>
         </p>
 
         <p class="mb-6 text-2xl lg:text-3xl">
