--- a/src/_includes/home/archived-conf-home.html
+++ b/src/_includes/home/archived-conf-home.html
@@ -8,7 +8,7 @@
         </h1>
 
         <p class="mb-4 text-2xl lg:text-3xl">
-          <strong>September 22-27, 2024</strong>
+          <strong>Dates TBA, {{ site.conf_year }}</strong>
         </p>
       </section>
 
